<resources>
    <string name="app_name">Cửa Hàng Nội Thất</string>
    <string name="cuaHangNoiThat">Cửa Hàng Nội Thất</string>
    <string name="sanPham">Sản Phẩm</string>
    <string name="loaiSanPham">Loại Sản Phẩm</string>
    <string name="khachHang">Khách Hàng</string>
    <string name="hoaDon">Hóa Đơn</string>
    <string name="chiTietHoaDon">Chi Tiết Hóa Đơn</string>
    <string name="thoat">Thoát</string>
    <string name="timKiem">Tìm Kiếm</string>
    <string name="ma">Mã</string>
    <string name="tenSanPham">Tên Sản Phẩm</string>
    <string name="gia">Giá</string>
    <string name="loai">Loại</string>
    <string name="hinhAnh">Hình Ảnh</string>
    <string name="them">Thêm</string>
    <string name="xoa">Xóa</string>
    <string name="sua">Sửa</string>
    <string name="troVe">Trở Về</string>
    <string name="xacNhan">Xác Nhận</string>
    <string name="reLoad">Làm Mới</string>
    <string name="huy">Hủy</string>
    <string name="themSanPham">Thêm Sản Phẩm</string>
    <string name="suaSanPham">Sửa Sản Phẩm</string>
    <string name="tenLoai">Tên Loại</string>
    <string name="mieuTa">Miêu Tả</string>
    <string name="danhSach">Danh Sách</string>
    <string name="themLoaiSanPham">Thêm Loại Sản Phẩm</string>
    <string name="suaLoaiSanPham">Sửa Loại Sản Phẩm</string>
    <string name="hoTenKhachHang">Họ Tên</string>
    <string name="sdt">Số Điện Thoại</string>
    <string name="diaChi">Địa Chỉ</string>
    <string name="email">Email</string>
    <string name="password">Mật Khẩu</string>
    <string name="themKhachHang">Thêm Khách Hàng</string>
    <string name="suaKhachHang">Sửa Khách Hàng</string>
    <string name="maKH">Mã Khách Hàng</string>
    <string name="maHD">Mã Hóa Đơn</string>
    <string name="ngayHD">Ngày Hóa Đơn</string>
    <string name="themHoaDon">Thêm Hóa Đơn</string>
    <string name="suaHoaDon">Sửa Hóa Đơn</string>
    <string name="themChiTietHoaDon">Thêm Chi Tiết Hóa Đơn</string>
    <string name="suaChiTietHoaDon">Sửa Chi Tiết Hóa Đơn</string>
    <string name="soLuong">Số Lượng</string>
    <string name="maSP">Mã Sản Phẩm</string>
    <string name="doanhThuSanPham">Doanh Thu Sản Phẩm</string>
    <string name="bieuDo">Biểu Đồ</string>
    <string name="doanhThu">Doanh Thu</string>
    <string name="thoiGian">Thời Gian</string>
    <string name="thang">Tháng</string>
    <string name="nam">Năm</string>
    <string name="thongKe">Thống Kê</string>
    <string name="trangThai">Trạng Thái</string>
    <string name="dangNhap">Đăng Nhập</string>
    <string name="dangKy">Đăng Ký</string>
    <string name="dangXuat">Đăng Xuất</string>
    <string name="matKhau">Mật Khẩu</string>
    <string name="dangKyNgay">Chưa có tài khoản? </string>
    <string name="nhapLaiMatKhau">Nhập Lại Mật Khẩu</string>
    <string name="maXacNhan">Mã Xác Nhận</string>
</resources>