<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/AB_DangXuat"
        android:icon="@drawable/logout"
        android:title="Giỏ hàng"
        app:showAsAction="always"/>
    <item
        android:id="@+id/AB_SanPham"
        app:showAsAction="never"
        android:title="@string/sanPham"/>
    <item
        android:id="@+id/AB_LoaiSP"
        app:showAsAction="never"
        android:title="@string/loaiSanPham"/>
    <item
        android:id="@+id/AB_KhachHang"
        app:showAsAction="never"
        android:title="@string/khachHang"/>
    <item
        android:id="@+id/AB_HoaDon"
        app:showAsAction="never"
        android:title="@string/hoaDon"/>
    <item
        android:id="@+id/AB_CTHD"
        app:showAsAction="never"
        android:title="@string/chiTietHoaDon"/>
    <item
        android:id="@+id/AB_ThongKe"
        app:showAsAction="never"
        android:title="@string/thongKe"/>
</menu>