<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/doanhThuSanPham"
        android:textSize="40dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#c58d40"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/ma"
            android:textStyle="bold"
            android:textColor="#c58d40"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tenSanPham"
            android:textStyle="bold"
            android:textColor="#c58d40"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/soLuong"
            android:textStyle="bold"
            android:textColor="#c58d40"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/doanhThu"
            android:textStyle="bold"
            android:textColor="#c58d40"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/thoiGian"
            android:textStyle="bold"
            android:textColor="#c58d40"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/lvDoanhThu"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnBieuDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bieuDo"
            app:backgroundTint="#c58d40"
            android:layout_marginRight="10dp"
            android:textColor="#fff"
            />
        <Button
            android:id="@+id/btnTroVe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/troVe"
            app:backgroundTint="#c58d40"
            android:layout_marginRight="10dp"
            android:textColor="#fff"
            />
    </LinearLayout>


</LinearLayout>