<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_key"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/listSDTKH"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/sdt"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/listHoTenKh"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/hoTenKhachHang"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/listDiachiKh"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/diaChi"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/listEmail"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/listMK"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
</LinearLayout>