<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_key"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/lvDT_ma"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/ma"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/lvDT_ten"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tenSanPham"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/lvDT_SoLuong"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/soLuong"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/lvDT_doanhThu"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/doanhThu"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/lvDT_thoiGian"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/thoiGian"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />

    </LinearLayout>
</LinearLayout>