<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbarfrmSanPham"
        app:title="Sản Phẩm"
        android:background="#4665ce"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sanPham"
        android:textSize="40dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#c58d40"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtTimKiem"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/timKiem"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="#c58d40"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="TÌM KIẾM"
            android:textColor="#fff"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/ma"
            android:textStyle="bold"
            android:textColor="#c58d40"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/tenSanPham"
            android:textStyle="bold"
            android:textColor="#c58d40"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/gia"
            android:textStyle="bold"
            android:textColor="#c58d40"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/loai"
            android:textStyle="bold"
            android:textColor="#c58d40"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/hinhAnh"
            android:textStyle="bold"
            android:textColor="#c58d40"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
    <!--<ListView
        android:id="@+id/lvSanPham"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="30dp"
        />-->
    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/lvSanPham"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnThem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/them"
            app:backgroundTint="#c58d40"
            android:layout_marginLeft="5dp"
            android:textColor="#fff"
            />
        <!--<Button
            android:id="@+id/btnXoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xoa"
            app:backgroundTint="#c58d40"
            android:layout_marginLeft="5dp"
            />
        <Button
            android:id="@+id/btnSua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sua"
            app:backgroundTint="#c58d40"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            />-->


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btnTroVe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/troVe"
            app:backgroundTint="#c58d40"
            android:textColor="#fff"
            />
    </LinearLayout>
</LinearLayout>