<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_key"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lvMaHD"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/maHD"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/lvMaKH"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/maKH"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            android:textSize="17dp"
            />
        <TextView
            android:id="@+id/lvNgayHD"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ngayHD"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            android:textSize="17dp"
            />
        <TextView
            android:id="@+id/lvTrangThai"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/trangThai"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            android:textSize="17dp"
            />

    </LinearLayout>
</LinearLayout>