<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_key"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/lvMaSP"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/ma"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/lvTenSP"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/tenSanPham"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/lvGiaSP"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/gia"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/lvLoaiSP"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/loai"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            />

        <ImageView
            android:id="@+id/listImage"
            android:layout_width="60dp"
            android:layout_height="60dp" />
    </LinearLayout>
</LinearLayout>