<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbarfrmSuaHoaDon"
        app:title="Sửa"
        android:background="#4665ce"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/suaHoaDon"
        android:textAlignment="center"
        android:textColor="#c58d40"
        android:textSize="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maHD"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtMaHD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/ma"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maKH"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <Spinner
            android:id="@+id/spnMaKH"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:spinnerMode="dropdown"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ngayHD"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />

        <EditText
            android:id="@+id/edtNgayHD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ngayHD"
            android:inputType="date"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trangThai"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            />
        <Spinner
            android:id="@+id/spnTrangThai"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/btnXacNhan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xacNhan"
                app:backgroundTint="#c58d40"
                android:layout_marginRight="10dp"
                android:textColor="#fff"
                />

            <Button
                android:id="@+id/btnHuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huy"
                app:backgroundTint="#c58d40"
                android:layout_marginRight="10dp"
                android:textColor="#fff"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>