<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_key"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lvMHD"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:text="@string/maHD"
            android:textColor="#ac8a5a"
            android:textStyle="bold"
            android:textSize="17dp"/>
        <TextView
            android:id="@+id/lvMSP"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/maSP"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            android:textSize="17dp"
            />
        <TextView
            android:id="@+id/lvSL"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/soLuong"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            android:textSize="17dp"
            />
    </LinearLayout>
</LinearLayout>