<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_key"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/lvMaLoaiSP"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/ma"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/lvTenLoaiSP"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/tenLoai"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            android:textSize="20dp"
            />
        <TextView
            android:id="@+id/lvMieuTa"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/mieuTa"
            android:textStyle="bold"
            android:textColor="#ac8a5a"
            android:gravity="center_horizontal"
            android:textSize="20dp"
            />

    </LinearLayout>
</LinearLayout>